flux/infra/configs/monitoring/grafana-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: "ca-issuer"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - grafana.taile77d89.ts.net
      secretName: grafana-tls-secret
  rules:
    - host: grafana.taile77d89.ts.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-prometheus-stack-grafana
                port:
                  number: 80
